fix: Headers spacing

--- a/src/dashboard/Dashboard.scss
+++ b/src/dashboard/Dashboard.scss
@@ -7,6 +7,7 @@
  */
 .content {
   margin-left: 300px;
+  margin-top: 51px;
 }
 
 body:global(.expanded) {
