--- a/src/dashboard/Data/ApiConsole/ApiConsole.scss
+++ b/src/dashboard/Data/ApiConsole/ApiConsole.scss
@@ -24,7 +24,7 @@
 .content {
   position: relative;
   min-height: 100vh;
-  padding-top: 96px;
+  padding-top: 48px;
 }
 
 .empty {
