--- a/src/dashboard/TableView.scss
+++ b/src/dashboard/TableView.scss
@@ -9,7 +9,7 @@
 
 .headers {
   position: fixed;
-  top: 96px;
+  top: 99px;
   left: 300px;
   right: 0;
   background: #66637A;
